# Ra

./: .clang-format  .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  block_reduce.cu  mesh1d_add.cu  stream_sum.cu
example/: CMakeLists.txt
example/linear_advection/: CMakeLists.txt  main_linear_advection_1d.cu
include/ra/: benchmark.cuh  dg.cuh  error.cuh  index.cuh  mesh.cuh  mesh_op.cuh  mpi.cuh  netcdf.cuh  pmesh.cuh  snapshot.cuh  test.cuh  timestepper.cuh  utility.cuh
src/: CMakeLists.txt  benchmark_mesh1d_add.cu  dg_linear.cu  dg_projection.cu  error_constructor.cu  error_get_message.cu  error_invoke.cu  mesh1d_add.cu  mesh1d_assign.cu  mesh1d_constructor.cu  mesh1d_copy.cu  mesh1d_divide.cu  mesh1d_get_device_coordinate.cu  mesh1d_get_device_stencil.cu  mesh1d_get_host_coordinate.cu  mesh1d_get_host_stencil.cu  mesh1d_multiply.cu  mesh1d_norm.cu  mesh1d_read.cu  mesh1d_subtract.cu  mesh1d_sync.cu  mesh1d_transfer.cu  mesh1d_write.cu  mesh2d_add.cu  mesh2d_assign.cu  mesh2d_constructor.cu  mesh2d_copy.cu  mesh2d_divide.cu  mesh2d_get_device_coordinate.cu  mesh2d_get_device_stencil.cu  mesh2d_get_host_coordinate.cu  mesh2d_get_host_stencil.cu  mesh2d_multiply.cu  mesh2d_read.cu  mesh2d_subtract.cu  mesh2d_sync.cu  mesh2d_write.cu  mesh_add.cu  mesh_assign.cu  mesh_constructor.cu  (+36 more)
test/: CMakeLists.txt  error_constructor.cu  error_operator.cu  index_ind2sub_left.cu  index_ind2sub_right.cu  index_sub2ind_left.cu  index_sub2ind_right.cu  mesh1d_add.cu  mesh1d_assign.cu  mesh1d_constructor.cu  mesh1d_copy.cu  mesh1d_divide.cu  mesh1d_multiply.cu  mesh1d_norm.cu  mesh1d_read.cu  mesh1d_subtract.cu  mesh1d_sync.cu  mesh1d_transfer.cu  mesh1d_write.cu  mesh2d_constructor.cu  pmesh1d_calibrate.cu  pmesh1d_constructor.cu  pmesh1d_copy.cu  pmesh1d_read.cu  pmesh1d_sync.cu  pmesh1d_transfer.cu  pmesh1d_write.cu  snapshot_calibrate.cu  snapshot_constructor.cu  snapshot_copy.cu  timestepperexplicitrk1d_calibrate.cu  timestepperexplicitrk1d_constructor.cu  timestepperexplicitrk1d_find_epsilon.cu  timestepperexplicitrk1d_reset_mesh.cu  timestepperexplicitrk1d_step.cu  timestepperexplicitrk1d_try_step.cu
tool/: git-commit-msg.sh
